- Made comments on transition forms be mandatory through JavaScript checking.
- Added ATOM export for content boxes.
Bug fixes:
~~~~~~~~~~
- fix #453: it was a CSS bug and needed a little fix in JavaScript lib
- Fixed computeId that did not have exactly the expected behavior and modified
  the unit tests accordingly.
- fix #457: menu box strange behavior
- Modified the RSS link for content box to not be an image but rather a text 
  + CSS as it was at the beginning, but better looking. It's now located at the
  top right corner of the box.
- Removed the "list-style-type" CSS property in nuxeo_css2.css since it was too
  restrictive and prevented user agents to use the default nice adopted behavior
  (at least for Mozilla and MSIE) to have an alternation of "disc", "circle" and
  "square".
- Fixed the spaces around li elements: added more focus to the CSS selector and
  put space only after the li elements (but spaces around li element should
  disappear eventually).
- Made the tab style menu have more focus (for better integration with tools
  like CPSSkins).
- Cleaned HTML some more.
- Made joining of the portal de-activated by default, as this is not the way
  clients wants it to be by default.
- Use <dtml-comment> to comment things in .css.dtml
- fix #458: Firefox cannot syndicate RSS exports from CPS
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- splitting macro_lib makes customization easier
- TreeBox have now a 'portal_tree_stop_depth' which can be set from
  the zmi to restrict absolute depth
- Renamed the "Nuxeo logo" box into "CPS logo" which it really is.
- new CSS menuTabs class to create clean menu tabs like sections/workspaces
- Renamed and added some CSS properties so that they are more generic and can be
  used in other products such as CPSSubscriptions.
- Made comments mandatory in transition forms through JavaScript control.
- Factorization: made the transition_form from content_lib_transition_form.pt
  used by all CPSDefault transition forms.