@@ -68,3 +68,6 @@ New internal features:
 - Made comments mandatory in transition forms through JavaScript control.
 - Factorization: made the transition_form from content_lib_transition_form.pt
   used by all CPSDefault transition forms.
+- Renamed nuxeo_rss_css.css.dtml into rss.css.dtml because noone will ever
+  customize this CSS on a per web site basis and this CSS has nothing Nuxeo
+  specific.
